fix : fixed the project dir

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ stages:
     - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure set default.region $AWS_REGION
-    - cd $CI_PROJECT_DIR/api/terraform
+    - cd $CI_PROJECT_DIR
     # Initialize with explicit backend config
     - >
       terraform init \
