feat : added debugging

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,12 @@ prepare-environment:
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure set default.region $AWS_REGION
     - cd $CI_PROJECT_DIR/$TERRAFORM_DIR
+    - pwd 
+    - ls -R 
+    - echo "Project Dir: $CI_PROJECT_DIR"
+    - echo "Terraform Dir: $TERRAFORM_DIR"
+    - echo "Full Path: $CI_PROJECT_DIR/$TERRAFORM_DIR"
+    - test -f "$CI_PROJECT_DIR/$TERRAFORM_DIR/main.tf" && echo "main.tf exists" || echo "main.tf NOT FOUND"
     # Initialize Terraform
     - >
       terraform init \
