--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,11 +63,11 @@ prepare-environment:
     - test -f "$CI_PROJECT_DIR/$TERRAFORM_DIR/main.tf" && echo "main.tf exists" || echo "main.tf NOT FOUND"
     - >
       terraform init 
-        -backend-config="bucket=${TF_STATE_BUCKET}" 
-        -backend-config="key=${TF_STATE_KEY}" 
-        -backend-config="region=${AWS_REGION}" 
-        -backend-config="dynamodb_table=${TF_LOCK_TABLE}" 
-        -backend-config="encrypt=true"
+      -backend-config="bucket=$TF_STATE_BUCKET" 
+      -backend-config="key=$TF_STATE_KEY" 
+      -backend-config="region=$AWS_REGION" 
+      -backend-config="dynamodb_table=$TF_LOCK_TABLE" 
+      -backend-config="encrypt=true"
       
 terraform:validate:
   stage: terraform:validate
