--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,8 @@ prepare-environment:
 terraform:validate:
   stage: terraform:validate
   needs:
-    - prepare-environment  
+    - job : prepare-environment
+      artifacts: true
   <<: *terraform_setup
   script:
     - terraform validate
@@ -102,8 +103,10 @@ terraform:plan:
 terraform:apply:
   stage: terraform:apply
   needs:
-    - terraform:plan
-    - prepare-environment
+    - job : terraform:plan
+      artifacts: true
+    - job : prepare-environment
+      artifacts: true
   rules:
     # Automatically deploy to staging from triggers
     - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging"
@@ -122,7 +125,7 @@ terraform:apply:
 trigger-tests:
   stage: trigger-tests
   needs:
-    - terraform:apply  
+    - job : terraform:apply  
   rules:
     - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging"
       when: on_success
@@ -130,7 +133,7 @@ trigger-tests:
     - apk add --no-cache curl jq
   script:
     - echo "Triggering integrations tests for staging environment"
-    - 'curl --request POST --form "token=$CODE_TRIGGER_TOKEN" --form "ref=main" --form "variables[ENVIRONMENT]=$ENV_NAME" "https://gitlab.com/api/v4/projects/$CODE_PROJECT_ID/trigger/pipeline" > pipeline_response.json'
+    - 'curl --request POST --form "token=$CODE_TRIGGER_TOKEN" --form "ref=main" --form "variables[ENVIRONMENT]=staging" "https://gitlab.com/api/v4/projects/$CODE_PROJECT_ID/trigger/pipeline" > pipeline_response.json'
     - cat pipeline_response.json
     - 'export INFRA_PIPELINE_ID=$(cat pipeline_response.json | jq -r ".id")'
     - 'if [ "$INFRA_PIPELINE_ID" == "null" ]; then echo "Failed to trigger infrastructure pipeline"; exit 1; fi'
