--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,11 +133,7 @@ trigger-tests:
     - apk add --no-cache curl jq
   script:
     - echo "Triggering integrations tests for staging environment"
-    - 'curl --request POST --form "token=$CODE_TRIGGER_TOKEN" --form "ref=main" --form "variables[ENVIRONMENT]=staging" "https://gitlab.com/api/v4/projects/$CODE_PROJECT_ID/trigger/pipeline" > pipeline_response.json'
-    - cat pipeline_response.json
-    - 'export INFRA_PIPELINE_ID=$(cat pipeline_response.json | jq -r ".id")'
-    - 'if [ "$INFRA_PIPELINE_ID" == "null" ]; then echo "Failed to trigger infrastructure pipeline"; exit 1; fi'
-    - echo "INFRA_PIPELINE_ID=$INFRA_PIPELINE_ID" >> infra_pipeline.env
+    - 'curl --request POST --form "token=$CODE_TRIGGER_TOKEN" --form "ref=main" --form "variables[ENVIRONMENT]=staging" "https://gitlab.com/api/v4/projects/$CODE_PROJECT_ID/trigger/pipeline"'
   environment:
     name: $ENVIRONMENT
 
