--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ default:
 variables:
   ENVIRONMENT: ${ENVIRONMENT:-production}
   TRIGGER_SOURCE: ${TRIGGER_SOURCE:-gitlab}
-  ACTION: ${TRIGGER_ACTION:-apply}
+  TRIGGER_ACTION: ${TRIGGER_ACTION:-apply}
   CODE_PROJECT_ID: "67610186"
 
 stages:
@@ -13,6 +13,7 @@ stages:
   - terraform:plan
   - terraform:apply
   - trigger-tests
+  - terraform:destroy
 
 # Simple environment detection
 prepare-environment:
@@ -119,10 +120,10 @@ terraform:apply:
       artifacts: true
   rules:
     # Automatically deploy to staging from triggers
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "apply"
       when: on_success
     # Manual deployment for production or regular pipeline runs
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "production"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "production" && $TRIGGER_ACTION == "apply"
       when: manual
     - if: $CI_COMMIT_BRANCH == "main"
       when: manual
@@ -137,7 +138,7 @@ trigger-tests:
   needs:
     - job : terraform:apply  
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_SOURCE == "gitlab"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_SOURCE == "gitlab" && $TRIGGER_ACTION == "apply"
       when: on_success
   before_script:
     - apk add --no-cache curl jqmanual
@@ -152,7 +153,7 @@ trigger-tests:
     name: $ENVIRONMENT
 
 terraform:destroy:
-  stage: terraform:apply
+  stage: terraform:destroy
   needs:
     - prepare-environment 
   rules:
