--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,10 +71,8 @@ prepare-environment:
       
 terraform:validate:
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "apply"
       when: on_success
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $TRIGGER_SOURCE == "iphone" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "destroy"
-      when: never
   needs:
     - job : prepare-environment
       artifacts: true
@@ -85,10 +83,8 @@ terraform:validate:
 
 terraform:plan:
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "apply"
       when: on_success
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $TRIGGER_SOURCE == "iphone" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "destroy"
-      when: never
   needs:
     - prepare-environment  
     - terraform:validate
@@ -110,17 +106,6 @@ terraform:apply:
       artifacts: true
     - job : prepare-environment
       artifacts: true
-  rules:
-    # Automatically deploy to staging from triggers
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "apply"
-      when: on_success
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $TRIGGER_SOURCE == "iphone" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "destroy"
-      when: never
-    # Manual deployment for production or regular pipeline runs
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "production" && $TRIGGER_ACTION == "apply"
-      when: manual
-    - if: $CI_COMMIT_BRANCH == "main"
-      when: manual
   <<: *terraform_setup
   script:
     - terraform apply -auto-approve
@@ -133,8 +118,6 @@ trigger-tests:
   rules:
     - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_SOURCE == "gitlab" && $TRIGGER_ACTION == "apply"
       when: on_success
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $TRIGGER_SOURCE == "iphone" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "destroy"
-      when: never
   before_script:
     - apk add --no-cache curl jq
   script:
@@ -151,7 +134,7 @@ terraform:destroy:
   needs:
     - prepare-environment
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" || $CI_COMMIT_BRANCH == "main"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $TRIGGER_SOURCE == "gitlab" 
       when: manual    
     - if: $CI_PIPELINE_SOURCE == "trigger" && $TRIGGER_SOURCE == "iphone" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "destroy"
       when: always
