--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ prepare-environment:
       
 terraform:validate:
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "apply"
+    - if: $TRIGGER_ACTION == "apply"
       when: on_success
   needs:
     - job : prepare-environment
@@ -83,7 +83,7 @@ terraform:validate:
 
 terraform:plan:
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_ACTION == "apply"
+    - if: $TRIGGER_ACTION == "apply"
       when: on_success
   needs:
     - prepare-environment  
@@ -106,6 +106,9 @@ terraform:apply:
       artifacts: true
     - job : prepare-environment
       artifacts: true
+  rules:
+    - if: $TRIGGER_ACTION == "apply"
+      when: on_success
   <<: *terraform_setup
   script:
     - terraform apply -auto-approve
