--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,9 @@ terraform:apply:
       artifacts: true
   rules:
     - if: $TRIGGER_ACTION == "apply"
-      when: on_success
+      when: on_success    
+    - if: $TRIGGER_SOURCE == "gitlab"
+      when: manual
   <<: *terraform_setup
   script:
     - terraform apply -auto-approve
@@ -117,7 +119,7 @@ trigger-tests:
     - job : terraform:apply  
   rules:
     - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_SOURCE == "gitlab" && $TRIGGER_ACTION == "apply"
-      when: on_success
+      when: on_success    
   before_script:
     - apk add --no-cache curl jq
   script:
