--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,7 +144,7 @@ trigger-tests:
   needs:
     - job : terraform:apply  
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" gitlab && $TRIGGER_SOURCE == "gitlab" && $TRIGGER_ACTION == "apply"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_SOURCE == "gitlab" && $TRIGGER_ACTION == "apply"
       when: on_success    
   before_script:
     - apk add --no-cache curl jq
