--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,8 @@ terraform:plan:
   rules:
     - if: $TRIGGER_ACTION == "apply"
   needs:
-    - prepare-environment  
+    - job: prepare-environment
+      artifacts: true
     - terraform:validate
   <<: *terraform_setup
   script:
@@ -100,8 +101,10 @@ comment-merge-request:
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
   needs:
-    - prepare-environment
-    - terraform:plan
+    - job: prepare-environment
+      artifacts: true
+    - job: terraform:plan
+      artifacts: true
   script:
     - echo "Commenting MR with Terraform plan output"
     - |
@@ -144,7 +147,7 @@ trigger-tests:
   needs:
     - job : terraform:apply  
   rules:
-    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" gitlab && $TRIGGER_SOURCE == "gitlab" && $TRIGGER_ACTION == "apply"
+    - if: $CI_PIPELINE_SOURCE == "trigger" && $ENVIRONMENT == "staging" && $TRIGGER_SOURCE == "gitlab" && $TRIGGER_ACTION == "apply"
       when: on_success    
   before_script:
     - apk add --no-cache curl jq
